Squashed commit of the following:
commit 4f380f1d09283b6c6d5f67a298a88f6f79cb49b5
Author: Christopher Garza <43961806+cobaltwebtech@users.noreply.github.com>
Date:   Sat Feb 22 01:01:45 2025 -0600

    Fixed Case Issue

    - File names of the case change were being ignored. Had to use a temporary name change to force Git to recognize new case change. (from header.astro to Header.astro)

commit aa8a4cb1da07d15817904c6eaa916d3bd9f55d55
Author: Christopher Garza <43961806+cobaltwebtech@users.noreply.github.com>
Date:   Sat Feb 22 00:59:57 2025 -0600

    Temporary name change

commit 385a91060bbefa83594919765faf92b18e140dc7
Author: Christopher Garza <43961806+cobaltwebtech@users.noreply.github.com>
Date:   Sat Feb 22 00:46:26 2025 -0600

    Updated Import Paths

commit 1fd1816d41f7ce0ba9becdf7911486401226883f
Author: Christopher Garza <43961806+cobaltwebtech@users.noreply.github.com>
Date:   Sat Feb 22 00:36:00 2025 -0600

    Update tsconfig.json

commit 60dcf32b866313a8eb81347371ef241f4b469be1
Author: Christopher Garza <43961806+cobaltwebtech@users.noreply.github.com>
Date:   Sat Feb 22 00:30:32 2025 -0600

    Updated tsconifg

commit d267aadc702b50d3b06f892562a0c8273b7340f0
Author: Christopher Garza <43961806+cobaltwebtech@users.noreply.github.com>
Date:   Sat Feb 22 00:28:01 2025 -0600

    Updated import paths

commit 5303a985493a0cd1b8356edcdb6b1b9cdca06ec7
Author: Christopher Garza <43961806+cobaltwebtech@users.noreply.github.com>
Date:   Sat Feb 22 00:15:24 2025 -0600

    Fixed tsconfig

commit 6034544ed28628a65ee9c014eab117981e9579a6
Author: Christopher Garza <43961806+cobaltwebtech@users.noreply.github.com>
Date:   Fri Feb 21 23:50:09 2025 -0600

    Fixed tsconfig

commit 5f7f34789378627fbc9c7858a7508ad32af27656
Author: Christopher Garza <43961806+cobaltwebtech@users.noreply.github.com>
Date:   Fri Feb 21 23:17:40 2025 -0600

    Fixed tsconfig

commit b8707e5a0040738f34b705a5cedf6fb003b597e6
Author: Christopher Garza <43961806+cobaltwebtech@users.norepl

--- a/src/components/sections/SectionHistory.astro
+++ b/src/components/sections/SectionHistory.astro
@@ -1,12 +1,12 @@
 ---
 import { Icon } from "astro-icon/components";
 import { Image } from "astro:assets";
-import ContentSection from "~/components/content-section.astro";
-import DonateButton from "~/components/donate-button.astro";
+import ContentSection from "@/components/ContentSection.astro";
+import DonateButton from "@/components/DonateButton.astro";
 
 // Import images
-import archive from "~/assets/photos/Dublin-Corner-Lot-archive.avif";
-import plaque from "~/assets/photos/Dublin-Corner-Lot-1.avif";
+import archive from "@/assets/images/Dublin-Corner-Lot-archive.avif";
+import plaque from "@/assets/images/Dublin-Corner-Lot-1.avif";
 ---
 
 <ContentSection title="History of the Corner Lot" id="history">
