--- a/src/pages/thank-you-for-donating.astro
+++ b/src/pages/thank-you-for-donating.astro
@@ -1,131 +1,11 @@
 ---
-import { AstroFont } from "astro-font";
-import { join } from "path";
-import Footer from "~/components/footer.astro";
-import Header from "~/components/header.astro";
-import Donation from "~/components/sections/donation-received.astro";
-import "~/styles/global.css";
+import BaseLayout from "@/layouts/BaseLayout.astro";
+import Donation from "@/components/sections/DonationReceived.astro";
+import { SITE } from "@/data/siteConfig";
 
-const { generator, site } = Astro;
-const umamiId = import.meta.env.UMAMI_WEBSITE_ID;
-const image = new URL("social.jpg", site);
-const description =
-  "Dublin Corner Lot is a non-profit organization whose mission is to beautify and provide a free and open public space for all to use.";
+const pageTitle: string = `Thank You for Donating | ${SITE.title}`;
 ---
 
-<!doctype html>
-<html lang="en" class="scrollbar-hide lenis lenis-smooth" data-theme="dark">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
-    <meta name="generator" content={generator} />
-
-    <title>Thank You for Donating | Dublin Corner Lot</title>
-    <meta name="description" content={description} />
-    <meta name="robots" content="noindex" />
-
-    <!-- social media -->
-    <meta property="og:title" content="Dublin Corner Lot" />
-    <meta property="og:type" content="website" />
-    <meta property="og:description" content={description} />
-    <meta property="og:image" content={image} />
-    <meta property="og:url" content={site} />
-    <meta name="twitter:card" content="summary_large_image" />
-
-    <!--Load and define fonts -->
-    <AstroFont
-      config={[
-        {
-          preload: false,
-          display: "swap",
-          name: "Avenir",
-          fallback: "sans-serif",
-          src: [
-            {
-              weight: "100",
-              style: "normal",
-              path: join(
-                process.cwd(),
-                "public",
-                "fonts",
-                "Avenir-Light.woff2",
-              ),
-            },
-            {
-              weight: "400",
-              style: "normal",
-              path: join(
-                process.cwd(),
-                "public",
-                "fonts",
-                "Avenir-Medium.woff2",
-              ),
-            },
-            {
-              weight: "800",
-              style: "normal",
-              path: join(
-                process.cwd(),
-                "public",
-                "fonts",
-                "Avenir-Heavy.woff2",
-              ),
-            },
-            {
-              weight: "900",
-              style: "normal",
-              path: join(
-                process.cwd(),
-                "public",
-                "fonts",
-                "Avenir-Black.woff2",
-              ),
-            },
-          ],
-        },
-      ]}
-    />
-
-    <!--Import Lenis smooth scroll script -->
-    <script>
-      import "~/assets/scripts/lenisSmoothScroll.js";
-    </script>
-
-    <!-- initialize theme -->
-    <script is:inline>
-      const themeSaved = localStorage.getItem("theme");
-
-      if (themeSaved) {
-        document.documentElement.dataset.theme = themeSaved;
-      } else {
-        const prefersDark = window.matchMedia(
-          "(prefers-color-scheme: dark)",
-        ).matches;
-        document.documentElement.dataset.theme = prefersDark ? "dark" : "light";
-      }
-
-      window
-        .matchMedia("(prefers-color-scheme: dark)")
-        .addEventListener("change", (event) => {
-          if (!localStorage.getItem("theme")) {
-            document.documentElement.dataset.theme = event.matches
-              ? "dark"
-              : "light";
-          }
-        });
-    </script>
-    <!-- Umami Analytics script tag -->
-    <script
-      defer
-      src="https://umami.cobaltweb.tech/script.js"
-      data-website-id={umamiId}></script>
-  </head>
-  <body
-    class="bg-default text-default selection:bg-secondary h-full overflow-x-hidden text-base selection:text-white"
-  >
-    <Header />
-    <Donation />
-    <Footer />
-  </body>
-</html>
+<BaseLayout title={pageTitle} noIndex={true}>
+  <Donation />
+</BaseLayout>
