--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,10 @@
 ---
 import { Icon } from "astro-icon/components";
-import ThemeSwitcher from "~/components/theme-switcher.astro";
-import Logo from "~/components/logo.astro";
-import type { NavItem } from "~/types";
+import ThemeSwitcher from "@/components/ThemeSwitcher.astro";
+import Logo from "@/components/Logo.astro";
+import type { NavItem } from "@/types";
 
+// Define array of menu items 
 const navItems: Array<NavItem> = [
   { title: "About Us", url: "/#about-us" },
   { title: "History", url: "/#history" },
