--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,38 +12,38 @@
   --color-primary: var(--color-primary);
   --color-secondary: var(--color-secondary);
 
-  --color-green-50: #edf8ec;
-  --color-green-100: #dcf1da;
-  --color-green-200: #bae3b5;
-  --color-green-300: #98d591;
-  --color-green-400: #76c76c;
-  --color-green-500: #54b948;
-  --color-green-600: #439439;
-  --color-green-700: #326f2b;
-  --color-green-800: #214a1c;
-  --color-green-900: #10250e;
+  --color-green-50: oklch(96.76% 0.0196 143.04);
+  --color-green-100: oklch(93.64% 0.0378 142.84);
+  --color-green-200: oklch(87.46% 0.0757 142.03);
+  --color-green-300: oklch(81.43% 0.1124 141.99);
+  --color-green-400: oklch(75.61% 0.1485 141.63);
+  --color-green-500: oklch(70.1% 0.1787 141.59);
+  --color-green-600: oklch(59.53% 0.1502 141.52);
+  --color-green-700: oklch(48.47% 0.1193 141.66);
+  --color-green-800: oklch(36.73% 0.0871 141.56);
+  --color-green-900: oklch(23.97% 0.05 142.08);
 
-  --color-gold-50: #fffae6;
-  --color-gold-100: #fff5cd;
-  --color-gold-200: #ffec9b;
-  --color-gold-300: #ffe369;
-  --color-gold-400: #ffda36;
-  --color-gold-500: #ffd105;
-  --color-gold-600: #cca704;
-  --color-gold-700: #997d03;
-  --color-gold-800: #665302;
-  --color-gold-900: #4c3e01;
+  --color-gold-50: oklch(98.37% 0.0267 95.33);
+  --color-gold-100: oklch(96.8% 0.0529 95.58);
+  --color-gold-200: oklch(94.05% 0.1027 96.55);
+  --color-gold-300: oklch(91.59% 0.1438 96.49);
+  --color-gold-400: oklch(89.41% 0.1707 95.37);
+  --color-gold-500: oklch(87.5% 0.1785 92.61);
+  --color-gold-600: oklch(74.02% 0.1509 92.75);
+  --color-gold-700: oklch(59.88% 0.1219 92.97);
+  --color-gold-800: oklch(44.85% 0.091 93.37);
+  --color-gold-900: oklch(36.79% 0.0748 94.37);
 
-  --color-blue-50: #ebf8fd;
-  --color-blue-100: #d7f1fb;
-  --color-blue-200: #afe4f7;
-  --color-blue-300: #88d6f4;
-  --color-blue-400: #60c9f0;
-  --color-blue-500: #39bced;
-  --color-blue-600: #2d96bd;
-  --color-blue-700: #22708e;
-  --color-blue-800: #164b5e;
-  --color-blue-900: #113847;
+  --color-blue-50: oklch(97.09% 0.0153 222.68);
+  --color-blue-100: oklch(94.22% 0.0305 222.88);
+  --color-blue-200: oklch(88.85% 0.0602 221.9);
+  --color-blue-300: oklch(83.62% 0.0875 224.47);
+  --color-blue-400: oklch(78.87% 0.1113 225.29);
+  --color-blue-500: oklch(74.64% 0.1298 228.05);
+  --color-blue-600: oklch(63.17% 0.1088 227.72);
+  --color-blue-700: oklch(51.23% 0.087 228.22);
+  --color-blue-800: oklch(38.75% 0.0629 226.03);
+  --color-blue-900: oklch(32.07% 0.0505 227.17);
   /* Animations */
   @keyframes fade-in {
     0% {
