Refactored Global Theme and New Content
- Refactored the global.css to work with the Starwind UI variables in Tailwind.
- Added new deps for Starwind UI comps (tailwind-merge, etc)
- Refactored ThemeSwitcher.astro to use class instead of data attribute
- Moved all third party SVG icons to local to speed up build time
- Added new content for donation page with button links to Stripe pages
- Updated TW classes to use new variables in global theme
-  Astro updated to 5.13.6
- Deps updated

--- a/src/components/DonateButton.astro
+++ b/src/components/DonateButton.astro
@@ -1,14 +1,14 @@
 ---
+import { Button } from "@/components/starwind/button";
 import { Icon } from "astro-icon/components";
 ---
 
-<button type="button" aria-label="Donate to Dublin Corner Lot">
-  <a
-    href="https://donate.stripe.com/28odSQ40d4wK1TW9AA"
-    class="flex items-center justify-center gap-3 border-2 border-current bg-green-500 px-6 py-4 font-extrabold uppercase"
-    target="_blank"
-  >
-    <Icon name="donate" class="size-8" />
-    <span>Donate Now</span>
-  </a>
-</button>
+<Button
+  aria-label="Donate to Dublin Corner Lot"
+  href="/donate"
+  size="lg"
+  class="text-xl font-bold uppercase"
+>
+  <Icon name="donate" class="size-8" />
+  <span>Donate Now</span>
+</Button>
