--- a/src/components/sections/SectionHistory.astro
+++ b/src/components/sections/SectionHistory.astro
@@ -10,7 +10,7 @@ import plaque from "@/assets/images/Dublin-Corner-Lot-1.avif";
 ---
 
 <ContentSection title="History of the Corner Lot" id="history">
-  <Icon slot="above-icon" name="mdi:about" class="size-32 text-green-400" />
+  <Icon slot="above-icon" name="about" class="text-foreground size-32" />
   <Fragment slot="lead">
     We call it the Corner Lot, but its official name is
     <br /><span class="text-primary">Pretty Peggy Pepper Park</span>.
@@ -34,7 +34,7 @@ import plaque from "@/assets/images/Dublin-Corner-Lot-1.avif";
     </div>
     <div class="w-full">
       <Image
-        class="w-full border-8 border-green-400"
+        class="border-border w-full border-8"
         src={archive}
         alt="Dublin Corner Lot before park built"
         format="avif"
@@ -52,7 +52,7 @@ import plaque from "@/assets/images/Dublin-Corner-Lot-1.avif";
       raise funds.
     </p>
     <Image
-      class="mx-auto w-8/12 border-8 border-green-400"
+      class="border-border mx-auto w-8/12 border-8"
       src={plaque}
       alt="Dublin Corner Lot dedication plaque"
       format="avif"
