--- a/src/components/sections/SectionMission.astro
+++ b/src/components/sections/SectionMission.astro
@@ -15,7 +15,7 @@ import img6 from "@/assets/images/Dublin-Corner-Lot-10.avif";
 
 <ContentSection title="Our Mission" id="our-mission">
   <Fragment slot="lead">
-    We are dedicated to continuing a <span class="text-green-500">green</span> and
+    We are dedicated to continuing a <span class="text-success">green</span> and
     open space for any and all to enjoy. <br /> This is <span
       class="text-primary">your</span
     > park!
@@ -23,7 +23,7 @@ import img6 from "@/assets/images/Dublin-Corner-Lot-10.avif";
   <div class="grid items-center gap-8 xl:grid-cols-2">
     <div class="mx-auto w-3/4">
       <Image
-        class="w-full border-8 border-green-400"
+        class="border-border w-full border-8"
         src={imgTall}
         alt="Dublin Corner Lot view"
         format="avif"
@@ -38,9 +38,7 @@ import img6 from "@/assets/images/Dublin-Corner-Lot-10.avif";
         helping to maintain this park. Support through memberships, donations,
         and memorials keeps it flourishing.
       </p>
-      <h3
-        class="dark:text-gold-400 text-center text-3xl font-black text-green-600"
-      >
+      <h3 class="text-accent text-center text-3xl font-black">
         We Need Your Help!
       </h3>
       <p>
@@ -65,7 +63,7 @@ import img6 from "@/assets/images/Dublin-Corner-Lot-10.avif";
   <div class="grid max-w-screen-xl items-center gap-8 xl:grid-cols-3">
     <div class="w-full">
       <Image
-        class="w-full border-2 border-green-400"
+        class="border-border w-full border-2"
         src={img1}
         alt="Dublin Corner Lot promo photo"
         format="avif"
@@ -74,7 +72,7 @@ import img6 from "@/assets/images/Dublin-Corner-Lot-10.avif";
     </div>
     <div class="w-full">
       <Image
-        class="w-full border-2 border-green-400"
+        class="border-border w-full border-2"
         src={img2}
         alt="Dublin Corner Lot promo photo"
         format="avif"
@@ -83,7 +81,7 @@ import img6 from "@/assets/images/Dublin-Corner-Lot-10.avif";
     </div>
     <div class="w-full">
       <Image
-        class="w-full border-2 border-green-400"
+        class="border-border w-full border-2"
         src={img3}
         alt="Dublin Corner Lot promo photo"
         format="avif"
@@ -92,7 +90,7 @@ import img6 from "@/assets/images/Dublin-Corner-Lot-10.avif";
     </div>
     <div class="w-full">
       <Image
-        class="w-full border-2 border-green-400"
+        class="border-border w-full border-2"
         src={img4}
         alt="Dublin Corner Lot promo photo"
         format="avif"
@@ -101,7 +99,7 @@ import img6 from "@/assets/images/Dublin-Corner-Lot-10.avif";
     </div>
     <div class="w-full">
       <Image
-        class="w-full border-2 border-green-400"
+        class="border-border w-full border-2"
         src={img5}
         alt="Dublin Corner Lot promo photo"
         format="avif"
@@ -110,7 +108,7 @@ import img6 from "@/assets/images/Dublin-Corner-Lot-10.avif";
     </div>
     <div class="w-full">
       <Image
-        class="w-full border-2 border-green-400"
+        class="border-border w-full border-2"
         src={img6}
         alt="Dublin Corner Lot promo photo"
         format="avif"
