--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import SectionThird from "@/components/sections/SectionMission.astro";
 ---
 
 <BaseLayout externalAsset={true}>
-  <SectionHero />
+  <SectionHero slot="hero" />
   <SectionFirst />
   <SectionSecond />
   <SectionThird />
