--- a/src/components/BackToTopButton.astro
+++ b/src/components/BackToTopButton.astro
@@ -4,10 +4,10 @@ import { Icon } from "astro-icon/components";
 
 <button
   id="back-to-top"
-  class="invisible fixed right-5 bottom-5 cursor-pointer border-2 border-current bg-green-800 p-2 text-white opacity-0 shadow-lg transition-opacity duration-300 dark:bg-green-400"
+  class="border-border bg-offset text-default invisible fixed right-5 bottom-5 cursor-pointer border-2 p-2 opacity-0 shadow-lg transition-opacity duration-300"
   aria-label="Back to top"
 >
-  <Icon name="mdi:arrow-up-bold" class="size-8" />
+  <Icon name="arrow-up-bold" class="size-8" />
 </button>
 
 <script>
