--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,22 +1,8 @@
 ---
-import { Icon } from "astro-icon/components";
-import type { FooterLink } from "@/types";
-
-const links: Array<FooterLink> = [
-  {
-    url: "https://www.facebook.com/people/Dublin-Corner-Lot/61566389771766/?mibextid=LQQJ4d",
-    description: "Facebook Page",
-    icon: "mdi:facebook",
-  },
-  {
-    url: "https://www.instagram.com/dublin_cornerlot/",
-    description: "Instagram Profile",
-    icon: "mdi:instagram",
-  },
-];
+import DonateButton from "@/components/DonateButton.astro";
 ---
 
-<footer class="border-default bg-offset border-t-2 px-4 py-16">
+<footer class="border-border bg-offset border-t-2 px-4 py-16">
   <div class="flex w-full items-center justify-around">
     <div class="text-sm">
       <p class="font-extrabold">Dublin Corner Lot, Inc.</p>
@@ -25,28 +11,13 @@ const links: Array<FooterLink> = [
         <br /> EIN: 75-2784640
       </p>
     </div>
-    <ul class="grid grid-cols-2 gap-4">
-      {
-        links.map((link) => (
-          <li>
-            <a
-              class="flex size-16 items-center justify-center border-2 border-current p-4"
-              href={link.url}
-              target="_blank"
-            >
-              <span class="sr-only">{link.description}</span>
-              <Icon class="size-full" name={link.icon} />
-            </a>
-          </li>
-        ))
-      }
-    </ul>
+    <DonateButton />
   </div>
   <p class="mt-8 text-center text-sm">
     Website built by <a
       href="https://www.cobaltweb.tech/?utm_source=dublin-corner-lot&utm_medium=web&utm_campaign=client-site-links"
       target="_blank"
-      class="text-blue-600">Cobalt Web Technologies</a
+      class="text-primary">Cobalt Web Technologies</a
     > in Austin, TX
   </p>
 </footer>
