--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,6 +2,7 @@
 import { Icon } from "astro-icon/components";
 import ThemeSwitcher from "@/components/ThemeSwitcher.astro";
 import Logo from "@/components/Logo.astro";
+import { Button } from "@/components/starwind/button";
 import type { NavItem } from "@/types";
 
 // Define array of menu items
@@ -14,7 +15,7 @@ const navItems: Array<NavItem> = [
 
 <header
   id="page-header"
-  class="border-default bg-offset text-default fixed top-0 bottom-auto z-20 flex w-full items-center justify-between border-b-2 px-8 py-4"
+  class="border-border bg-offset text-default sticky inset-x-0 top-0 z-20 flex w-full items-center justify-between border-b-2 px-8 py-4"
 >
   <a class="flex items-center gap-3" href="/">
     <Logo class="w-28" />
@@ -34,79 +35,58 @@ const navItems: Array<NavItem> = [
           </ul>
         </nav>
         <div class="lg:hidden">
-          <a
-            href="https://donate.stripe.com/28odSQ40d4wK1TW9AA"
+          <Button
+            href="/donate"
             aria-label="Donate to Dublin Corner Lot"
-            class="flex w-fit items-center justify-center gap-1 border-2 border-current bg-green-500 p-1.5 text-xs font-extrabold uppercase"
-            target="_blank"
+            class="text-xs font-extrabold uppercase"
+            size="sm"
           >
             Donate Now
-          </a>
+          </Button>
         </div>
-        <button
+        <Button
           id="open-nav-button"
           type="button"
           class="btn lg:hidden"
           aria-label="Navigation"
+          size="sm"
         >
-          <Icon name="mdi:menu" class="size-8" />
-        </button>
+          <Icon name="menu" class="size-8" />
+        </Button>
         <div class="hidden lg:block">
-          <ul class="flex items-center gap-6">
-            <li>
-              <a
-                href="https://www.facebook.com/people/Dublin-Corner-Lot/61566389771766/?mibextid=LQQJ4d"
-                target="_blank"
-              >
-                <Icon name="mdi:facebook" class="size-8" />
-              </a>
-            </li>
-            <li>
-              <a
-                href="https://www.instagram.com/dublin_cornerlot/"
-                target="_blank"
-              >
-                <Icon name="mdi:instagram" class="size-8" />
-              </a>
-            </li>
-            <li>
-              <a
-                href="https://donate.stripe.com/28odSQ40d4wK1TW9AA"
-                aria-label="Donate to Dublin Corner Lot"
-                class="flex items-center justify-center gap-3 border-2 border-current bg-green-500 px-4 py-2 font-extrabold uppercase"
-                target="_blank"
-              >
-                <Icon name="donate" class="size-8" />
-                <span>Donate Now</span>
-              </a>
-            </li>
-          </ul>
+          <Button
+            href="/donate"
+            aria-label="Donate to Dublin Corner Lot"
+            class="font-extrabold uppercase"
+          >
+            <Icon name="donate" class="size-8" />
+            <span>Donate Now</span>
+          </Button>
         </div>
         <ThemeSwitcher />
       </div>
       <div id="menu-modal" class="modal hidden" aria-hidden="true">
-        <div class="bg-default text-default fixed inset-0 px-8 py-4">
+        <div class="bg-offset text-default fixed inset-0 px-8 py-4">
           <div class="space-y-4" role="dialog" aria-modal="true">
             <header class="text-right">
-              <button
+              <Button
                 id="close-nav-button"
                 type="button"
                 class="btn"
                 aria-label="Close navigation"
               >
-                <Icon name="mdi:close" class="size-8" />
-              </button>
+                <Icon name="close" class="size-8" />
+              </Button>
             </header>
             <div class="flex justify-center">
-              <a
-                href="https://donate.stripe.com/28odSQ40d4wK1TW9AA"
+              <Button
+                href="/donate"
                 aria-label="Donate to Dublin Corner Lot"
-                class="mx-auto flex w-fit items-center justify-center gap-3 border-2 border-current bg-green-500 px-4 py-2 font-extrabold uppercase"
-                target="_blank"
+                class="font-extrabold uppercase"
               >
                 <Icon name="donate" class="size-8" />
                 <span>Donate Now</span>
-              </a>
+              </Button>
             </div>
             <nav>
               <ul class="flex flex-col">
@@ -121,26 +101,6 @@ const navItems: Array<NavItem> = [
                 }
               </ul>
             </nav>
-            <ul class="flex flex-col gap-4">
-              <li>
-                <a
-                  class="mx-auto flex w-[10%] justify-center"
-                  href="https://www.facebook.com/people/Dublin-Corner-Lot/61566389771766/?mibextid=LQQJ4d"
-                  target="_blank"
-                >
-                  <Icon name="mdi:facebook" class="size-full" />
-                </a>
-              </li>
-              <li>
-                <a
-                  class="mx-auto flex w-[10%] justify-center"
-                  href="https://www.instagram.com/dublin_cornerlot/"
-                  target="_blank"
-                >
-                  <Icon name="mdi:instagram" class="size-full" />
-                </a>
-              </li>
-            </ul>
           </div>
         </div>
       </div>
