--- a/src/components/ThemeSwitcher.astro
+++ b/src/components/ThemeSwitcher.astro
@@ -2,17 +2,13 @@
 import { Icon } from "astro-icon/components";
 ---
 
-<!--
-  negative margin is sum of button width (6) and gap size of flex parent (6)
-  TODO don't hardcode these values
--->
 <button id="theme-switcher" type="button" class="ml-0 origin-[right_center]">
   <div id="icon-theme-light">
-    <Icon name="mdi:white-balance-sunny" class="size-6" />
+    <Icon name="white-balance-sunny" class="size-6" />
     <span class="sr-only">Use light theme</span>
   </div>
   <div id="icon-theme-dark" class="hidden">
-    <Icon name="mdi:weather-night" class="size-6" />
+    <Icon name="weather-night" class="size-6" />
     <span class="sr-only">Use dark theme</span>
   </div>
 </button>
@@ -24,10 +20,10 @@ import { Icon } from "astro-icon/components";
   const button = document.querySelector("#theme-switcher");
   invariant(button, "button should not be null");
 
-  const getThemeCurrent = () => document.documentElement.dataset.theme;
+  const getThemeCurrent = () =>
+    document.documentElement.classList.contains("dark") ? "dark" : "light";
   const getThemeNext = () => {
     const themeCurrent = getThemeCurrent();
-    invariant(themeCurrent, "themeCurrent should not be undefined");
     const indexThemeCurrent = themes.indexOf(themeCurrent);
     return themes[(indexThemeCurrent + 1) % themes.length];
   };
@@ -45,7 +41,11 @@ import { Icon } from "astro-icon/components";
 
   button.addEventListener("click", () => {
     const themeNext = getThemeNext();
-    document.documentElement.dataset.theme = themeNext;
+    if (themeNext === "dark") {
+      document.documentElement.classList.add("dark");
+    } else {
+      document.documentElement.classList.remove("dark");
+    }
     localStorage.setItem("theme", themeNext);
     updateIcon();
   });
