--- a/src/components/sections/SectionAbout.astro
+++ b/src/components/sections/SectionAbout.astro
@@ -9,7 +9,7 @@ import waterFountain from "@/assets/images/Dublin-Corner-Lot-3.avif";
 ---
 
 <ContentSection title="About the Dublin Corner Lot" id="about-us">
-  <Icon slot="above-icon" name="mdi:tree" class="size-32 text-green-400" />
+  <Icon slot="above-icon" name="tree" class="text-foreground size-32" />
   <Fragment slot="lead">
     Your <span class="text-primary">community park</span> at the heart of Dublin,
     Texas.
@@ -18,7 +18,7 @@ import waterFountain from "@/assets/images/Dublin-Corner-Lot-3.avif";
   <div class="grid items-center gap-8 xl:grid-cols-3">
     <div class="w-full xl:col-span-2">
       <Image
-        class="w-full border-8 border-green-400"
+        class="border-border w-full border-8"
         src={waterFountain}
         alt="Dublin Corner Lot water fountain"
         format="avif"
