--- a/src/components/ContentSection.astro
+++ b/src/components/ContentSection.astro
@@ -9,7 +9,7 @@ const { title, id } = Astro.props;
 
 <section
   id={id}
-  class="mx-auto flex max-w-screen-xl scroll-mt-24 flex-col items-center gap-4 space-y-8 px-8 py-16 sm:py-24"
+  class="mx-auto flex max-w-screen-xl scroll-mt-24 flex-col items-center gap-4 space-y-8"
 >
   <div class="flex flex-col items-center gap-4">
     <slot name="above-icon" />
