--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -47,7 +47,7 @@ const navItems: Array<NavItem> = [
         <Button
           id="open-nav-button"
           type="button"
-          class="btn lg:hidden"
+          class="btn p-1 lg:hidden"
           aria-label="Navigation"
           size="sm"
         >
@@ -72,8 +72,9 @@ const navItems: Array<NavItem> = [
               <Button
                 id="close-nav-button"
                 type="button"
-                class="btn"
+                class="btn p-1"
                 aria-label="Close navigation"
+                size="sm"
               >
                 <Icon name="close" class="size-8" />
               </Button>
