--- a/src/components/sections/SectionAbout.astro
+++ b/src/components/sections/SectionAbout.astro
@@ -18,7 +18,7 @@ import waterFountain from "@/assets/images/Dublin-Corner-Lot-3.avif";
   <div class="grid items-center gap-8 xl:grid-cols-3">
     <div class="w-full xl:col-span-2">
       <Image
-        class="border-border w-full border-8"
+        class="border-border w-full border-4 sm:border-8"
         src={waterFountain}
         alt="Dublin Corner Lot water fountain"
         format="avif"
