--- a/src/components/sections/SectionHero.astro
+++ b/src/components/sections/SectionHero.astro
@@ -6,7 +6,7 @@ import VideoHero from "@/components/VideoHero.astro";
   <div class="animate-fade-in relative">
     <VideoHero />
     <h1
-      class="text-gold-400 absolute top-1/2 z-10 mx-4 w-full -translate-y-1/2 text-center text-xl font-black sm:mx-0 md:text-6xl"
+      class="text-gold-400 absolute top-1/2 z-10 mx-4 w-full -translate-y-1/2 text-center text-xl font-black text-shadow-lg/80 sm:mx-0 sm:text-2xl md:text-4xl lg:text-6xl"
     >
       Welcome to Dublin's Front Porch
     </h1>
