--- a/src/components/sections/SectionHistory.astro
+++ b/src/components/sections/SectionHistory.astro
@@ -34,7 +34,7 @@ import plaque from "@/assets/images/Dublin-Corner-Lot-1.avif";
     </div>
     <div class="w-full">
       <Image
-        class="border-border w-full border-8"
+        class="border-border w-full border-4 sm:border-8"
         src={archive}
         alt="Dublin Corner Lot before park built"
         format="avif"
@@ -52,7 +52,7 @@ import plaque from "@/assets/images/Dublin-Corner-Lot-1.avif";
       raise funds.
     </p>
     <Image
-      class="border-border mx-auto w-8/12 border-8"
+      class="border-border mx-auto w-8/12 border-4 sm:border-8"
       src={plaque}
       alt="Dublin Corner Lot dedication plaque"
       format="avif"
