--- a/src/components/sections/SectionMission.astro
+++ b/src/components/sections/SectionMission.astro
@@ -23,7 +23,7 @@ import img6 from "@/assets/images/Dublin-Corner-Lot-10.avif";
   <div class="grid items-center gap-8 xl:grid-cols-2">
     <div class="mx-auto w-3/4">
       <Image
-        class="border-border w-full border-8"
+        class="border-border w-full border-4 sm:border-8"
         src={imgTall}
         alt="Dublin Corner Lot view"
         format="avif"
